# automated_devops_agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TESTING_GUIDE.md  VISION.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
automated_devops_agent/: __init__.py  agent.py  evaluate_agents.py  logger.py  memory_tools.py  pipelines.py  supporting_agents.py  tools.py
config/: .env.example  evaluation_results.json  project_context.json
devops_automator/: agent.py  pipelines.py  supporting_agents.py  tools.py
target_code/: README.md  test_agent.py  tools_test.py  vulnerable_app.py
tests/: __init__.py  test_phase1_parallel_execution.py  test_phase2_sequential_workflows.py  test_phase3_loop_agents.py  test_phase4_advanced_tools.py
tests/benchmark_data/: complex_spaghetti.py  sql_injection_example.py
tests/demo/: README.md  buggy_login.py  test_login.py
tests/fixtures/: flaky_code.py  sample_vulnerable_code.py
